# midisym

./: .gitignore  README.md  pyproject.toml  setup.py
midisym/: __init__.py  constants.py  external.py
midisym/analysis/: __init__.py  feature_extraction.py  grid_quantize.py  melody_extraction.py  transcription_metrics.py  utils.py
midisym/analysis/chord/: __init__.py  chord_event.py  chord_interval.py
midisym/converter/: __init__.py  constants.py  graph.py  matrix.py
midisym/converter/sequence/: __init__.py  vocabulary.py
midisym/parser/: __init__.py  constants.py  container.py  midi.py  renderer.py  utils.py  xml.py
src/: mymodule.c  mymodule2.cpp
tests/: conftest.py  test_absolute_time_matrix.py  test_analysis_utils.py  test_external_module.py  test_feature_extraction.py  test_graph.py  test_grid_quantize.py  test_grid_time_mat.py  test_melody_extraction.py  test_midilib_benchmark.py  test_parser.py  test_renderer.py  test_sample_usage.py  test_sequence.py  test_ticks_and_second_conversion.py  test_transcription_metrics.py
tests/sample/: YHtysd6SKhA.qmidi.mid  analyzed_performance_piano.mid  grid_quantized.mid  grid_quantized_pop1k7.mid  grid_quantized_ticks.mid  midi_messages.txt  multi-instrumental.xml  piast_example__asc-c5M1k.mid  pop909_001_including_chord_marker.mid  pop909_output.mid
tests/sample/Barbie Girl/: infilling_input.mid  inpainted_large.mid  original.mid
